--- a/index.html
+++ b/index.html
@@ -2,25 +2,16 @@
 <html lang="en">  
 <head>  
     <meta charset="UTF-8">  
-    <title>Sigma0 - Agriculture Technology Startup</title>  
+    <title>Sigma0 - Radar Sensing Re-Imagined</title>  
     <meta name="viewport" content="width=device-width, initial-scale=1">  
     <!-- Include Tailwind CSS via CDN -->  
     <script src="https://cdn.tailwindcss.com"></script>  
-    <style>  
-    @font-face {  
-        font-family: 'CustomFont';  
-        src: url('/mnt/data/file-ngwyeoEN29l1M3O1QpdxCwkj') format('truetype');  
-    }  
-
-    body {  
-        font-family: 'CustomFont', sans-serif;  
-    }  
-    </style>  
 </head>  
 <body class="flex items-center justify-center min-h-screen bg-white">  
     <div class="text-center">  
-        <img src="assets/logo.png" alt="Sigma0 Logo" class="mx-auto mb-4">  
-        <h1 class="text-4xl font-semibold">radar sensing re-imagined</h1>  
+        <img src="assets/logo.png" alt="Sigma0 Logo" class="mx-auto mb-8">  
+        <h1 class="text-6xl font-bold">radar sensing re-imagined</h1>  
     </div>  
 </body>  
 </html>  
+
