--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
-<!DOCTYPE html>  
-<html lang="en">  
-<head>  
-    <meta charset="UTF-8">  
-    <title>Sigma0 - Radar Sensing Re-Imagined</title>  
-    <meta name="viewport" content="width=device-width, initial-scale=1">  
-    <!-- Include Tailwind CSS via CDN -->  
-    <script src="https://cdn.tailwindcss.com"></script>  
-</head>  
-<body class="flex items-center justify-center min-h-screen bg-white">  
-    <div class="text-center">  
-        <img src="assets/logo.png" alt="Sigma0 Logo" class="mx-auto mb-8">  
-        <h1 class="text-6xl font-bold">radar sensing re-imagined</h1>  
-    </div>  
-</body>  
-</html>  
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Sigma0 - Radar Sensing Re-Imagined</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Include Tailwind CSS via CDN -->
+    <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="flex items-center justify-center min-h-screen bg-white">
+    <div class="flex flex-col items-start">
+        <img src="assets/logo.png" alt="Sigma0 Logo" class="mb-2 w-96 h-96">
+    </div>
+</body>
+</html>
