--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Sigma0 - Radar Sensing Re-Imagined</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Include Tailwind CSS via CDN -->
-    <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="flex items-center justify-center min-h-screen bg-white">
-    <div class="flex flex-col items-start">
-        <img src="assets/logo.png" alt="Sigma0 Logo" class="mb-2 w-96 h-96">
-    </div>
-</body>
-</html>
+<!DOCTYPE html>  
+<html lang="en">  
+<head>  
+    <meta charset="UTF-8">  
+    <title>Sigma0 - Radar Sensing Re-Imagined</title>  
+    <meta name="viewport" content="width=device-width, initial-scale=1">  
+    <!-- Include Bulma CSS via CDN -->  
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">  
+</head>  
+<body>  
+    <section class="section has-text-centered">  
+        <div class="container">  
+            <img src="assets/logo.png" alt="Sigma0 Logo" style="max-width: 300px; height: auto; margin-bottom: 20px;">  
+            <h1 class="title is-1">Radar Sensing Re-Imagined</h1>  
+        </div>  
+    </section>  
+</body>  
+</html>  
