--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body>  
     <section class="section has-text-centered">  
         <div class="container">  
-            <img src="assets/logo.png" alt="Sigma0 Logo" style="max-width: 300px; height: auto; margin-bottom: 20px;">  
-            <h1 class="title is-1">Radar Sensing Re-Imagined</h1>  
+            <img src="assets/logo.png" alt="Sigma0 Logo" style="max-width: 300px; height: auto;">  
         </div>  
     </section>  
 </body>  
