--- a/index.html
+++ b/index.html
@@ -2,16 +2,121 @@
 <html lang="en">  
 <head>  
     <meta charset="UTF-8">  
-    <title>Sigma0 - Radar Sensing Re-Imagined</title>  
-    <meta name="viewport" content="width=device-width, initial-scale=1">  
-    <!-- Include Bulma CSS via CDN -->  
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+    <title>Sigma0, LLC - Radar Sensing Re-Imagined</title>  
+    <script src="https://cdn.tailwindcss.com"></script>  
+    <script>  
+        tailwind.config = {  
+            theme: {  
+                extend: {  
+                    colors: {  
+                        'sigma-green': '#9bb92d',  
+                        'sigma-dark': '#1a1a1a',  
+                    }  
+                }  
+            }  
+        }  
+    </script>  
 </head>  
-<body>  
-    <section class="section has-text-centered">  
-        <div class="container">  
-            <img src="assets/logo.png" alt="Sigma0 Logo" style="max-width: 600px; height: auto;">  
+<body class="bg-gray-50">  
+    <!-- Navigation -->  
+    <nav class="bg-white shadow-lg">  
+        <div class="max-w-6xl mx-auto px-4">  
+            <div class="flex justify-between items-center py-4">  
+                <div class="flex items-center space-x-4">  
+                    <img src="./assets/logo.png" alt="Sigma0 Logo" class="h-12 w-auto">  
+                    <span class="font-bold text-xl text-sigma-dark">Sigma0, LLC</span>  
+                </div>  
+                <div class="hidden md:flex items-center space-x-8">  
+                    <a href="#services" class="text-gray-600 hover:text-sigma-green">Services</a>  
+                    <a href="#about" class="text-gray-600 hover:text-sigma-green">About</a>  
+                    <a href="#contact" class="text-gray-600 hover:text-sigma-green">Contact</a>  
+                </div>  
+            </div>  
         </div>  
-    </section>  
+    </nav>  
+
+    <!-- Hero Section -->  
+    <div class="bg-sigma-green text-white">  
+        <div class="max-w-6xl mx-auto px-4 py-20">  
+            <div class="text-center">  
+                <h1 class="text-4xl md:text-5xl font-bold mb-6">Radar Sensing Re-Imagined</h1>  
+                <p class="text-xl mb-8">Advancing radar technology with innovative solutions</p>  
+                <a href="#contact" class="bg-white text-sigma-green px-8 py-3 rounded-lg font-semibold hover:bg-gray-100 transition duration-300">  
+                    Get Started  
+                </a>  
+            </div>  
+        </div>  
+    </div>  
+
+    <!-- Services Section -->  
+    <div id="services" class="py-20 bg-white">  
+        <div class="max-w-6xl mx-auto px-4">  
+            <h2 class="text-3xl font-bold text-center mb-12">Our Services</h2>  
+            <div class="grid md:grid-cols-3 gap-8">  
+                <div class="p-6 border rounded-lg hover:shadow-lg transition duration-300">  
+                    <h3 class="text-xl font-semibold mb-4 text-sigma-green">Radar System Design</h3>  
+                    <p class="text-gray-600">Expert consultation on radar system architecture and design optimization</p>  
+                </div>  
+                <div class="p-6 border rounded-lg hover:shadow-lg transition duration-300">  
+                    <h3 class="text-xl font-semibold mb-4 text-sigma-green">Performance Analysis</h3>  
+                    <p class="text-gray-600">Comprehensive radar performance evaluation and enhancement strategies</p>  
+                </div>  
+                <div class="p-6 border rounded-lg hover:shadow-lg transition duration-300">  
+                    <h3 class="text-xl font-semibold mb-4 text-sigma-green">Technical Training</h3>  
+                    <p class="text-gray-600">Specialized training programs for radar technology and applications</p>  
+                </div>  
+            </div>  
+        </div>  
+    </div>  
+
+    <!-- About Section -->  
+    <div id="about" class="py-20 bg-gray-50">  
+        <div class="max-w-6xl mx-auto px-4">  
+            <div class="text-center max-w-3xl mx-auto">  
+                <h2 class="text-3xl font-bold mb-6">About Sigma0</h2>  
+                <p class="text-gray-600 mb-8">  
+                    Sigma0, LLC is a leading radar consulting firm specializing in advanced radar technology solutions.   
+                    Our team of experts brings decades of combined experience in radar systems, signal processing,   
+                    and consulting services.  
+                </p>  
+            </div>  
+        </div>  
+    </div>  
+
+    <!-- Contact Section -->  
+    <div id="contact" class="py-20 bg-white">  
+        <div class="max-w-6xl mx-auto px-4">  
+            <h2 class="text-3xl font-bold text-center mb-12">Contact Us</h2>  
+            <div class="max-w-lg mx-auto">  
+                <form class="space-y-6">  
+                    <div>  
+                        <label class="block text-gray-700 mb-2" for="name">Name</label>  
+                        <input type="text" id="name" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-sigma-green">  
+                    </div>  
+                    <div>  
+                        <label class="block text-gray-700 mb-2" for="email">Email</label>  
+                        <input type="email" id="email" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-sigma-green">  
+                    </div>  
+                    <div>  
+                        <label class="block text-gray-700 mb-2" for="message">Message</label>  
+                        <textarea id="message" rows="4" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-sigma-green"></textarea>  
+                    </div>  
+                    <button type="submit" class="w-full bg-sigma-green text-white py-3 rounded-lg font-semibold hover:bg-opacity-90 transition duration-300">  
+                        Send Message  
+                    </button>  
+                </form>  
+            </div>  
+        </div>  
+    </div>  
+
+    <!-- Footer -->  
+    <footer class="bg-sigma-dark text-white py-8">  
+        <div class="max-w-6xl mx-auto px-4">  
+            <div class="text-center">  
+                <p>&copy; 2024 Sigma0, LLC. All rights reserved.</p>  
+            </div>  
+        </div>  
+    </footer>  
 </body>  
 </html>  
