--- a/index.html
+++ b/index.html
@@ -17,28 +17,13 @@
             }  
         }  
     </script>  
-    <style>  
-        .logo-container {  
-            display: flex;  
-            align-items: center;  
-        }  
-        .logo-container img {  
-            max-height: 100%;  
-            width: auto;  
-        }  
-    </style>  
 </head>  
 <body class="bg-gray-50">  
     <!-- Navigation -->  
     <nav class="bg-white shadow-lg">  
         <div class="max-w-7xl mx-auto px-4">  
-            <div class="flex justify-between items-center py-2">  
-                <div class="logo-container flex items-center space-x-4">  
-                    <!-- Updated logo size -->  
-                    <img src="./assets/logo.png" alt="Sigma0 Logo" class="h-20 md:h-24 w-auto">  
-                    <span class="font-bold text-xl md:text-2xl text-sigma-dark">Sigma0, LLC</span>  
-                </div>  
-                <div class="hidden md:flex items-center space-x-8">  
+            <div class="flex justify-end items-center py-4">  
+                <div class="flex items-center space-x-8">  
                     <a href="#services" class="text-gray-600 hover:text-sigma-green text-lg">Services</a>  
                     <a href="#about" class="text-gray-600 hover:text-sigma-green text-lg">About</a>  
                     <a href="#contact" class="text-gray-600 hover:text-sigma-green text-lg">Contact</a>  
@@ -47,7 +32,87 @@
         </div>  
     </nav>  
 
-    <!-- Rest of the HTML remains the same -->  
-    <!-- ... -->  
+    <!-- Hero Section -->  
+    <div class="bg-sigma-green text-white">  
+        <div class="max-w-6xl mx-auto px-4 py-20">  
+            <div class="text-center">  
+                <h1 class="text-4xl md:text-5xl font-bold mb-6">Radar Sensing Re-Imagined</h1>  
+                <p class="text-xl mb-12">Advancing radar technology with innovative solutions</p>  
+                <div class="flex justify-center">  
+                    <img src="./assets/logo.png" alt="Sigma0 Logo" class="h-32 md:h-40 w-auto hover:scale-105 transition-transform duration-300">  
+                </div>  
+            </div>  
+        </div>  
+    </div>  
+
+    <!-- Services Section -->  
+    <div id="services" class="py-20 bg-white">  
+        <div class="max-w-6xl mx-auto px-4">  
+            <h2 class="text-3xl font-bold text-center mb-12">Our Services</h2>  
+            <div class="grid md:grid-cols-3 gap-8">  
+                <div class="p-6 border rounded-lg hover:shadow-lg transition duration-300">  
+                    <h3 class="text-xl font-semibold mb-4 text-sigma-green">Radar System Design</h3>  
+                    <p class="text-gray-600">Expert consultation on radar system architecture and design optimization</p>  
+                </div>  
+                <div class="p-6 border rounded-lg hover:shadow-lg transition duration-300">  
+                    <h3 class="text-xl font-semibold mb-4 text-sigma-green">Performance Analysis</h3>  
+                    <p class="text-gray-600">Comprehensive radar performance evaluation and enhancement strategies</p>  
+                </div>  
+                <div class="p-6 border rounded-lg hover:shadow-lg transition duration-300">  
+                    <h3 class="text-xl font-semibold mb-4 text-sigma-green">Technical Training</h3>  
+                    <p class="text-gray-600">Specialized training programs for radar technology and applications</p>  
+                </div>  
+            </div>  
+        </div>  
+    </div>  
+
+    <!-- About Section -->  
+    <div id="about" class="py-20 bg-gray-50">  
+        <div class="max-w-6xl mx-auto px-4">  
+            <div class="text-center max-w-3xl mx-auto">  
+                <h2 class="text-3xl font-bold mb-6">About Sigma0</h2>  
+                <p class="text-gray-600 mb-8">  
+                    Sigma0, LLC is a leading radar consulting firm specializing in advanced radar technology solutions.   
+                    Our team of experts brings decades of combined experience in radar systems, signal processing,   
+                    and consulting services.  
+                </p>  
+            </div>  
+        </div>  
+    </div>  
+
+    <!-- Contact Section -->  
+    <div id="contact" class="py-20 bg-white">  
+        <div class="max-w-6xl mx-auto px-4">  
+            <h2 class="text-3xl font-bold text-center mb-12">Contact Us</h2>  
+            <div class="max-w-lg mx-auto">  
+                <form class="space-y-6">  
+                    <div>  
+                        <label class="block text-gray-700 mb-2" for="name">Name</label>  
+                        <input type="text" id="name" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-sigma-green">  
+                    </div>  
+                    <div>  
+                        <label class="block text-gray-700 mb-2" for="email">Email</label>  
+                        <input type="email" id="email" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-sigma-green">  
+                    </div>  
+                    <div>  
+                        <label class="block text-gray-700 mb-2" for="message">Message</label>  
+                        <textarea id="message" rows="4" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-sigma-green"></textarea>  
+                    </div>  
+                    <button type="submit" class="w-full bg-sigma-green text-white py-3 rounded-lg font-semibold hover:bg-opacity-90 transition duration-300">  
+                        Send Message  
+                    </button>  
+                </form>  
+            </div>  
+        </div>  
+    </div>  
+
+    <!-- Footer -->  
+    <footer class="bg-sigma-dark text-white py-8">  
+        <div class="max-w-6xl mx-auto px-4">  
+            <div class="text-center">  
+                <p>&copy; 2024 Sigma0, LLC. All rights reserved.</p>  
+            </div>  
+        </div>  
+    </footer>  
 </body>  
 </html>  
