--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                             <i class="bi bi-broadcast text-brand me-3" style="font-size: 2rem;"></i>  
                             <h5 class="card-title mb-0">RF & Microwave</h5>  
                         </div>  
-                        <p class="card-text">Specialized knowledge in RF system design, antenna development, and microwave technology implementation.</p>  
+                        <p class="card-text">Specialized knowledge in RF system design, antenna development and microwave technology implementation.</p>  
                     </div>  
                 </div>  
             </div>  
@@ -181,7 +181,7 @@
                             <i class="bi bi-cpu text-brand me-3" style="font-size: 2rem;"></i>  
                             <h5 class="card-title mb-0">Digital Processing</h5>  
                         </div>  
-                        <p class="card-text">Advanced signal processing algorithms and real-time embedded systems development.</p>  
+                        <p class="card-text">Advanced radar signal processing algorithms and implementation.</p>  
                     </div>  
                 </div>  
             </div>  
@@ -190,9 +190,9 @@
                     <div class="card-body">  
                         <div class="d-flex align-items-center mb-3">  
                             <i class="bi bi-graph-up text-brand me-3" style="font-size: 2rem;"></i>  
-                            <h5 class="card-title mb-0">Data Analytics</h5>  
+                            <h5 class="card-title mb-0">Radar Simulations</h5>  
                         </div>  
-                        <p class="card-text">Sophisticated data analysis and interpretation for radar applications and system optimization.</p>  
+                        <p class="card-text">Multi-fidelity radar simulations using Matlab(TM) and Remcom Waveferer and Xfdtd.</p>  
                     </div>  
                 </div>  
             </div>  
@@ -225,7 +225,7 @@
                     <div class="col-md-6">  
                         <div class="d-flex align-items-center">  
                             <i class="bi bi-check-circle-fill text-brand me-2"></i>  
-                            <span>Advanced Research Background</span>  
+                            <span>Advanced Research and Development Background</span>  
                         </div>  
                     </div>  
                     <div class="col-md-6">  
@@ -237,7 +237,7 @@
                     <div class="col-md-6">  
                         <div class="d-flex align-items-center">  
                             <i class="bi bi-check-circle-fill text-brand me-2"></i>  
-                            <span>End-to-End Implementation</span>  
+                            <span> System Engineering End-to-end solutions </span>  
                         </div>  
                     </div>  
                 </div>  
