--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                     <div class="col-md-6">  
                         <div class="d-flex align-items-center">  
                             <i class="bi bi-check-circle-fill text-brand me-2"></i>  
-                            <span>Advanced Research and Development Background</span>  
+                            <span>Advanced R&D capabilities
                         </div>  
                     </div>  
                     <div class="col-md-6">  
@@ -237,7 +237,7 @@
                     <div class="col-md-6">  
                         <div class="d-flex align-items-center">  
                             <i class="bi bi-check-circle-fill text-brand me-2"></i>  
-                            <span> System Engineering End-to-end solutions </span>  
+                            <span> Tailored Radar System Engineering </span>  
                         </div>  
                     </div>  
                 </div>  
